<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_gravity="center"
    android:background="@color/violeta"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etGame"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:hint="Elige un color"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/whitebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/blanco"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/redbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/rojo"
            android:checked="true"
            android:text="@string/red"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/orangebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/naranja"
            android:checked="true"
            android:text="@string/orange"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/yellowbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/amarillo"
            android:checked="true"
            android:text="@string/yellow"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/greenbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/verde"
            android:checked="true"
            android:text="@string/green"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/cianbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/cian"
            android:checked="true"
            android:text="@string/cian"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/azulbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/azul"
            android:checked="true"
            android:text="@string/blue"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/violetabtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/violeta"
            android:checked="true"
            android:text="@string/violet"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/greybtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/gris"
            android:checked="true"
            android:text="@string/grey"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/blackbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/black"
            android:checked="true"
            android:text="@string/black"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aplicar color"
        android:textColor="@color/white"
        android:backgroundTint="@color/rojo"/>


</LinearLayout>