<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="5dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvBlanco"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:text="@string/blanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvRojo"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@color/rojo"
            android:text="@string/red"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvnaranja"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/naranja"
                    android:text="@string/orange"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/tvAmarillo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/amarillo"
                    android:text="@string/yellow"
                    android:clickable="true"/>


            </LinearLayout>

            <TextView
                android:id="@+id/tvVerde"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@color/verde"
                android:text="@string/green"
                android:clickable="true"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvCian"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@color/cian"
                android:text="@string/cian"
                android:clickable="true"/>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAzul"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@color/azul"
                    android:text="@string/blue"
                    android:clickable="true"/>
                <TextView
                    android:id="@+id/tvVioleta"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@color/violeta"
                    android:text="@string/violet"
                    android:clickable="true"/>


            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvGris"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@color/gris"
                android:text="@string/grey"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tvNegro"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/black"
                android:text="@string/black"
                android:clickable="true"/>



        </LinearLayout>
    </LinearLayout>


</LinearLayout>

